--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
-    "generate": "ts-node --transpile-only src/schema.ts"
+    "generate": "ts-node --transpile-only src/schema.ts",
+    "migrate:deploy": "prisma migrate deploy",
+    "build": "prisma generate && npm run generate && tsc",
+    "start": "node dist/src/index.js"
   },
   "author": "ishimwe robert",
   "license": "MIT",
@@ -21,6 +24,8 @@
     "@prisma/client": "^3.15.2",
     "apollo-server": "^3.9.0",
     "bcryptjs": "~2.4.0",
+    "docker": "^0.2.14",
+    "docker-compose": "^0.23.17",
     "graphql": "^15.8.0",
     "jsonwebtoken": "~8.5.0",
     "nexus": "^1.3.0",
