--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "apollo-server": "^3.9.0",
+    "apollo-server-core": "^3.9.0",
     "bcryptjs": "~2.4.0",
     "docker": "^0.2.14",
     "docker-compose": "^0.23.17",
